--- a/TenIdeas/res/values/strings.xml
+++ b/TenIdeas/res/values/strings.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="hello">Hello TenIdeas!</string>
     <string name="app_name">TenIdeas</string>
+    <string name="addButton">Add a New Person</string>
+    <string name="viewButton">View a Person</string>
+    <string name="addTitle">Add a new person</string>
+    <string name="viewTitle">Pick a new person</string>
+    <string name="add">Add</string>
+    <string name="view">View</string>
+    <string name="name">TODO</string>
+    <string name="email">E-mail</string>
+    <string name="save">Save</string>
+
 </resources>
