--- a/TenIdeas/res/values/strings.xml
+++ b/TenIdeas/res/values/strings.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello TenIdeas!</string>
-    <string name="app_name">TenIdeas</string>
+
+    <string name="hello">Enter and view your related info</string>
+    <string name="app_name">Android Base</string>
+    <string name="add_new_person">Add a New Person</string>
+    <string name="view_person">View a Person</string>
+    <string name="pick_new_person">Pick a new person</string>
+    <string name="name">Name</string>
+    <string name="next">Next</string>
+    <string name="date">Date</string>
+    <string name="add">Add</string>
+    <string name="view">View</string>
+    <string name="save">Save</string>
+    <string name="colon"> : </string>
+    <string name="valid_name">Name added</string>
+    <string name="contentDescription">Image to put meaning to the numbers.</string>
+    <string name="settingsButton">Settings</string>
+    <string name="singleUser">Enable Single User Mode?</string>
 </resources>
