ten ideas getting closer

--- a/TenIdeas/res/values/strings.xml
+++ b/TenIdeas/res/values/strings.xml
@@ -9,14 +9,16 @@
     <string name="viewTitle">Pick a new person</string>
     <string name="add">Add</string>
     <string name="view">View</string>
-    <string name="name">TODO</string>
+    <string name="name">Name</string>
     <string name="email">E-mail</string>
     <string name="save">Save</string>
-    <string name="singleUser">Enable Single User Mode?</string>
     <string name="add_new_person">Add a New Person</string>
     <string name="view_person">View a Person</string>
     <string name="pick_new_person">Pick a new person</string>
     <string name="settingsButton">Settings</string>
     <string name="next">Next</string>
+    <string name="singleUser">Enable Single User Mode?</string>
+    <string name="generic_error_message">Invalid</string>
+    <string name="valid_name">Name added</string>
 
 </resources>
